# system

./: .devcontainer.json  .gitignore  Dockerfile  Doxyfile.in  LICENSE  Makefile  README.md  configure  cross_base.ini  meson.build  x64.ini
.github/workflows/: pr.yml
apps/monitor/: meson.build
docs/: _i_timer_8hpp.html  _i_timer_8hpp__dep__incl.map  _i_timer_8hpp__incl.map  _i_timer_8hpp_source.html  all__0_8js.html  all__10_8js.html  all__11_8js.html  all__12_8js.html  all__13_8js.html  all__14_8js.html  all__15_8js.html  all__16_8js.html  all__17_8js.html  all__1_8js.html  all__2_8js.html  all__3_8js.html  all__4_8js.html  all__5_8js.html  all__6_8js.html  all__7_8js.html  all__8_8js.html  all__9_8js.html  all__a_8js.html  all__b_8js.html  all__c_8js.html  all__d_8js.html  all__e_8js.html  all__f_8js.html  annotated.html  at__keyboard_8cpp.html  at__keyboard_8cpp__incl.md5  at__keyboard_8hpp__dep__incl.map  at__keyboard_8hpp__dep__incl.md5  at__keyboard_8hpp__incl.map  at__keyboard_8hpp_source.html  class_core.html  class_core__coll__graph.map  class_core__coll__graph.md5  class_core_adcc93b561dfefacfe2bcbd60604ea7a6_icgraph.md5  class_core_af5de2c1c89455727c2a1bb35fc62b601_cgraph.map  (+350 more)
docs/doxygen/: ____elf_8hpp.html  ____elf_8hpp__dep__incl.map  ____elf_8hpp__dep__incl.md5  ____elf_8hpp__incl.map  ____elf_8hpp__incl.md5  ____elf_8hpp_source.html  _i_timer_8hpp__dep__incl.md5  _i_timer_8hpp__incl.md5  _r_e_a_d_m_e_8md.html  annotated.html  array_8hpp.html  array_8hpp__dep__incl.map  array_8hpp__dep__incl.md5  array_8hpp__incl.map  array_8hpp__incl.md5  array_8hpp_source.html  assert_8h.html  assert_8h__dep__incl.map  assert_8h__dep__incl.md5  assert_8h__incl.map  assert_8h__incl.md5  assert_8h_source.html  at__keyboard_8cpp__incl.map  at__keyboard_8hpp.html  at__keyboard_8hpp__incl.md5  backend_8hpp.html  backend_8hpp__dep__incl.map  backend_8hpp__dep__incl.md5  backend_8hpp__incl.map  backend_8hpp__incl.md5  binary_8cpp.html  (+1255 more)
drivers/core/: meson.build
drivers/core/arm64/: arm64.ini  linker.ld  meson.build
drivers/core/arm64/src/: main.cpp  start.asm  start.s
drivers/core/arm64/src/console/: uart.cpp  uart.hpp
drivers/core/arm64/src/platform/: platform.h
drivers/core/arm64/src/platform/raspi3b/: platform.h  platform.ini
drivers/core/old/x64/: meson.build
drivers/core/old/x64/src/std/: panic.h
drivers/core/src/: core.hpp  main.cpp  platform.hpp
drivers/core/src/console/: console.hpp
drivers/core/src/devicetree/: dt.hpp  node.hpp  utils.hpp
drivers/core/src/libcxx/: cassert.cpp  new.cpp
drivers/core/src/memory/: heap.cpp  heap.hpp  manager.cpp  manager.hpp  map.cpp  map.hpp  types.hpp
drivers/core/src/platform/qemu_pc/: platform.cpp  platform.hpp  platform.ini
drivers/core/src/platform/qemu_pc/boot/: grub.cfg  start.asm
drivers/core/src/platform/qemu_pc/console/: console.cpp  uart.cpp  uart.hpp
drivers/core/src/platform/qemu_pc/libcxx/: abort.cpp  new.cpp
drivers/core/src/platform/raspi3b/: linker.ld  platform.cpp  platform.hpp  platform.ini
drivers/core/src/platform/raspi3b/boot/: start.asm
drivers/core/src/platform/raspi3b/console/: console.cpp  uart.cpp  uart.hpp  utils.asm
drivers/core/src/platform/raspi3b/libcxx/: abort.cpp
drivers/core/x64/: meson.build
drivers/core/x64/src/: core.cpp  core.hpp  core_manager.cpp  main.cpp
drivers/core/x64/src/interrupts/: frame.cpp  gdt.cpp  gdt.hpp  idt.cpp  pic.cpp  pic.hpp  tss.hpp
drivers/core/x64/src/logging/: logger.hpp  uart.cpp  uart.hpp  uart_logger.hpp
drivers/core/x64/src/memory/: paging.cpp  paging.hpp
drivers/core/x64/src/multiboot/: boot_info.cpp
drivers/core/x64/src/platform/qemu-pc/: platform.ini
drivers/core/x64/src/ports/: io_port.cpp  io_port.hpp
drivers/core/x64/src/registers/: cr3.hpp
drivers/core/x64/src/timer/: pit.cpp  pit.hpp  timer.hpp
drivers/cpu/x64/: linker.ld  meson.build  x64.ini
drivers/cpu/x64/interrupts/: frame.hpp  tss.cpp
drivers/cpu/x64/ports/: io_port.hpp
drivers/cpu/x64/src/interrupts/: gdt.hpp
drivers/cpu/x64/src/logging/: logger.hpp  uart.hpp
drivers/cpu/x64/src/multiboot/: multiboot2_header.asm
drivers/cpu/x64/src/ports/: io_port.cpp
drivers/cpu/x64/src/std/: msr.hpp
drivers/cpu/x64/src/timer/: timer.hpp
drivers/cpu/x64/timer/: pit.cpp
src/: grub.cfg
src/driver/cpu/x64/: Makefile.mk  core.cpp  core.hpp  grub.cfg  idt.cpp  inline_asm.hpp  main.cpp  meson.build  pic.cpp  start.asm
src/driver/cpu/x64/debug/: serial.cpp  serial.hpp  uart.cpp  uart.hpp  uart_logger.cpp  uart_logger.hpp
src/driver/cpu/x64/display/: README.md  vga.cpp  vga.hpp  vga_logger.cpp  vga_logger.hpp
src/driver/cpu/x64/interrupts/: frame.cpp  frame.hpp  gdt.cpp  gdt.hpp  handlers.asm  idt.cpp  idt.hpp  interrupt_manager.cpp  interrupt_manager.hpp  pic.cpp  pic.hpp  tss.cpp  tss.hpp
src/driver/cpu/x64/keyboard/: at_keyboard.cpp  at_keyboard.hpp  keyboard.hpp  keystate.cpp  keystate.hpp  ps2_controller.cpp  ps2_controller.hpp  ps2_keyboard.cpp  ps2_keyboard.hpp  scancode_set.hpp  scancode_set_2.cpp  scancode_set_2.hpp
src/driver/cpu/x64/logging/: logger.hpp
src/driver/cpu/x64/memory/: cr3.hpp  new.cpp  paging.cpp  paging.hpp
src/driver/cpu/x64/multiboot/: boot_info.cpp  boot_info.hpp  multiboot2.h
src/driver/cpu/x64/ports/: asm.h  io.h  io_port.cpp  io_port.hpp
src/driver/cpu/x64/registers/: cr3.hpp
src/driver/cpu/x64/std/: array.hpp  assert.h  cpp.cpp  cpp.hpp  cpuid.h  elf64.hpp  halt.h  logger.cpp  logger.hpp  logger_backend.hpp  memcpy.cpp  memcpy.hpp  memset.c  memset.cpp  memset.h  memset.hpp  panic.h  queue.hpp  stdint.h  string.cpp  string.hpp  text.cpp  text.hpp
src/driver/cpu/x64/timer/: ITimer.hpp  pit.cpp  pit.hpp  timer.hpp
src/std/: array  array.hpp  cassert.hpp  cstddef  cstddef.hpp  cstdint.hpp  cstring  cstring.cpp  cstring.hpp  format  format.hpp  memory_resource  memory_resource.hpp  meson.build  new  queue  queue.hpp  string  string.cpp  string.hpp  tuple  type_traits  type_traits.hpp  utility  utility.hpp
test/: run.sh
tests/: run.sh
tools/: Dockerfile  Doxyfile.in  configure  gdb_script_pre
(+344 files in other folders)
